Responsive CSS complete

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
                     <img src="./assets/images/icon-new-window.svg" alt="new window icon" class="new-window-icon">
                 </div>
             </footer>
-
-
         </main>
     </div>
 
+    <!-- JS -->
+    <script src="./index.js"></script>
 </body>
 </html>
