All working without Audio

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <button id="audio-play-btn"><img src="./assets/images/icon-play.svg" alt="play audio btn" class="play-audio-btn"></button>
                 
                     <audio id="audio-player">
-                        <source id="audio-source" src="" type="audio/mp3">
+                        <source id="audio-source" src="https://api.dictionaryapi.dev/media/pronunciations/en/keyboard-us.mp3" type="audio/mp3">
                     </audio>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                     <div class="header-line"></div>
                 </div>
 
-                <ul class="verb-meanings-list">
+                <ul class="verb-meanings-list" id="verb-meanings-list">
                     <li>(etc.) A set of keys used to operate a typewriter, computer etc.</li>
                     <p class="example-text">“Keyboarding is the part of this job I hate the most.”</p>
                 </ul>
