--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/colours.css">
     <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="./css/dark-theme.css">
     <link rel="stylesheet" href="./css/styles.css">
 
     <!-- Fonts -->
@@ -27,14 +28,14 @@
             
             <div class="right-col">
                 <select id="fontSelector" onchange="changeFont()">
-                    <option value="sans-serif">San Serif</option>
-                    <option value="serif">Serif</option>
-                    <option value="monospace">Mono</option>
+                    <option value="Inter">San Serif</option>
+                    <option value="Lora">Serif</option>
+                    <option value="Inconsolata">Mono</option>
                 </select>
 
                 <div class="switch-container">
                     <label class="switch">
-                        <input type="checkbox">
+                        <input type="checkbox" id="theme-switch">
                         <span class="slider"></span>
                     </label>
                     <img src="./assets/images/icon-moon.svg" alt="theme icon" class="theme-icon">
@@ -106,8 +107,10 @@
                     <img src="./assets/images/icon-new-window.svg" alt="new window icon" class="new-window-icon">
                 </div>
             </footer>
+
         </main>
     </div>
+    <p class="err-msg" id="err-msg">Whoops, can't be empty...</p>
 
     <!-- JS -->
     <script src="./index.js"></script>
