--- a/index.html
+++ b/index.html
@@ -110,7 +110,17 @@
 
         </main>
     </div>
+    
+    <!-- Err msg -->
     <p class="err-msg" id="err-msg">Whoops, can't be empty...</p>
+
+    <!-- No Word Found -->
+
+    <div id="not-found-msg-wr">
+        <span class="sad-emoji">&#128533;</span>
+        <p class="not-found-msg-title">No Definitions Found</p>
+        <p class="not-found-msg-body">Sorry pal, we couldn't find definitions for the word you were looking for. You can try the search again at later time or head to the web instead.</p>
+    </div>
 
     <!-- JS -->
     <script src="./index.js"></script>
