--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             
             <div class="right-col">
-                <select id="fontSelector" onchange="changeFont()">
+                <select id="font-selector">
                     <option value="Inter">San Serif</option>
                     <option value="Lora">Serif</option>
                     <option value="Inconsolata">Mono</option>
@@ -111,13 +111,10 @@
         </main>
     </div>
     
-    <!-- Err msg -->
+    <!-- Error Messages -->
     <div id="err-msg-wr" style="display: none;">
         <p class="err-msg" id="err-msg">Whoops, can't be empty...</p>
     </div>
-
-    <!-- No Word Found -->
-
     <div id="not-found-msg-wr" style="display: none;">
         <span class="sad-emoji">&#128533;</span>
         <p class="not-found-msg-title">No Definitions Found</p>
